# refinery

./: .env.example  .env.test.test  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: autofix-ci.yaml  cicd.yaml  commit-check.yaml  pr-title-lint.yaml
api/bruno/: Health check.bru  Refine S3.bru  Refine URL.bru  Refine URLs.bru  Refine Upload.bru  bruno.json
api/bruno/environments/: local.bru
src/fastapi_template/: cli.py  main.py  settings.py
src/refinery/: cli.py  examples.py  logger.py  main.py  settings.py  version.py
src/refinery/features/confidence/: confidence_calculator.py
src/refinery/features/ocr/: mistral_ocr_processor.py
src/refinery/features/presigned_url/: s3_presigned_url_generator.py
src/refinery/features/refinement/: mistral_ocr_processor.py  ocr_processor.py  openai_structured_output_processor.py  openai_summarization_processor.py
src/refinery/features/structured_output/: openai_structured_output_processor.py  openai_structured_output_with_confidence.py  structured_output_processor.py  structured_output_with_confidence.py
src/refinery/features/summarization/: openai_summarization_processor.py  summarization_processor.py
src/refinery/middleware/: correlation.py
src/refinery/ocr/: mistral.py  ocr.py
src/refinery/routers/: refine.py
src/refinery/s3/: objects.py  s3.py
src/refinery/structured_output/: openai.py  structured_output.py
src/refinery/validators/: json_schema.py
testdata/: example-json-schema.json  the-quick-brown-fox-jumps-over-the-lazy-dog.odt
tests/: conftest.py
tests/integration/: test_root.py
tests/integration/routers/: test_refine.py
tests/unit/features/confidence/: test_confidence_calculator.py
tests/unit/validators/: test_json_schema.py
